add target reward system to actor and fit others

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
 llvmlite==0.36.0
 Markdown==3.3.4
+nanoid==2.0.0
 numpy==1.19.5
 oauthlib==3.1.1
 opt-einsum==3.3.0
